update cwls for singularity error